tests/agl/rejections/lex/double_equals.agl
let flag = true
if flag == true => pass
